--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,13 +46,13 @@ h1, h2, h3, h4, h5, h6 {
   width: 40px;
   height: 40px;
   border-radius: 4px;
-  background: #3498db;
+  background: #ff0015ec;
   color: #fff;
   transition: all 0.4s;
 }
 
 .back-to-top i:hover {
-  background: #57aae1;
+  background: #687177;
   color: #fff;
 }
 
@@ -706,7 +706,7 @@ section {
 .services .icon-box::before {
   content: '';
   position: absolute;
-  background: #e1f0fa;
+  background: #fffef8;
   right: -60px;
   top: -40px;
   width: 100px;
@@ -717,7 +717,7 @@ section {
 }
 
 .services .icon-box:hover::before {
-  background: #3498db;
+  background: #ff7553;
   right: 0;
   top: 0;
   width: 100%;
